# juno

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  lib.rs  main.rs  models.rs  ollama.rs  workspace.rs
src-tauri/src/tools/: computer_use.rs  mcp.rs  mod.rs
ui/: app.js  index.html  styles.css
